strokeWidth in nested diagrams workaround